kubernetes/mysqldeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: venuzs/mysql:v2
          name: mysql
          ports:
            - containerPort: 3306
