kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 80
  selector:
    app: backend
